# dprint-py

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  METADATA  build.py  dprint.json  generate_config.py  pyproject.toml  readme.md  requirements.txt  rust-toolchain.toml  taskfile.yaml
.github/: mergify.yml  renovate.json
.github/workflows/: _build_wheels.yaml  auto-tag.yaml  lint.yaml  release.yaml  release.yml  sync-version.yaml  test.yaml
dprint/crates/core/: Cargo.toml
dprint/crates/dprint/: Cargo.toml
scripts/: sync_version.py
