[workspace]
resolver = "2"
members = [
  "dprint/crates/core",
  "dprint/crates/core-macros",
  "dprint/crates/development",
  "dprint/crates/dprint",
  "dprint/crates/test-process-plugin",
]
# excluded because this needs to be compiled as wasm to work
exclude = [
  "dprint/crates/test-plugin",
]

# Build release with debug symbols: cargo build --profile=release-with-debug
[profile.release-with-debug]
inherits = "release"
debug = true
