[build-system]
requires = ["non-exists-package"]
build-backend = "non-exists-backend"

[project]
name = "dprint-py"
requires-python = ">=3.8"
version = '0.49.1.2'
description = "a pluggable and configurable code formatting platform."
readme = "readme.md"
license = "MIT"
classifiers = [
  "Programming Language :: Rust",
  "Topic :: Software Development",
]
keywords = ["code-formatter", "formatter"]

authors = [
  { name = "dprint code formatting", email = "david@dprint.dev" },
]
maintainers = [
  { name = "trim21" },
]

[project.urls]
source = 'https://github.com/dprint/dprint'
repository = 'https://github.com/trim21/dprint-py'
homepage = 'https://dprint.dev/'

[tool.pack-binary]
cmd = 'dprint'

[[tool.pack-binary.target]]
url = "https://github.com/dprint/dprint/releases/download/0.49.1/dprint-x86_64-pc-windows-msvc.zip"
name = "dprint.exe"
platform = "win32"
arch = 'amd64'

# [[tool.pack-binary.target]]
# url = "https://github.com/dprint/dprint/releases/download/0.49.1/dprint-x86_64-unknown-linux-gnu.zip"
# name = "dprint"
# platform = "linux"
# arch = 'amd64'
# manylinux = '2.18'

# [[tool.pack-binary.target]]
# url = "https://github.com/dprint/dprint/releases/download/0.49.1/dprint-aarch64-unknown-linux-gnu.zip"
# name = "dprint"
# platform = "linux"
# arch = 'arm64'
# manylinux = '2.18'

[[tool.pack-binary.target]]
url = "https://github.com/dprint/dprint/releases/download/0.49.1/dprint-aarch64-apple-darwin.zip"
name = "dprint"
platform = "osx"
arch = 'arm64'
macos_target_version = '11.0'

[[tool.pack-binary.target]]
url = "https://github.com/dprint/dprint/releases/download/0.49.1/dprint-x86_64-apple-darwin.zip"
name = "dprint"
platform = "osx"
arch = 'amd64'
macos_target_version = '11.0'
