[build-system]
requires = ["non-exists-package"]
build-backend = "non-exists-backend"

[project]
name = "gen-dprint-py"
requires-python = ">=3.10"
version = '0.0.1'
classifiers = [
  "Private :: Do Not Upload",
]
dependencies = [
  "httpx ; python_version >= '3.10'",
  "pydantic ; python_version >= '3.10'",
  "jinja2 ; python_version >= '3.10'",
]

[tool.uv]
package = false

[tool.pack-binary]
cmd = 'dprint'

context = { version = '0.50.2' }

[tool.pack-binary.project]
name = "dprint-py"
requires-python = ">=3.0"
version = '0.50.2.0'
description = "a pluggable and configurable code formatting platform."
readme = "readme.md"
license = "MIT"
classifiers = [
  "Programming Language :: Rust",
  "Topic :: Software Development",
]
keywords = ["code-formatter", "formatter"]

authors = [
  { name = "dprint code formatting", email = "david@dprint.dev" },
]
maintainers = [
  { name = "trim21" },
]

[tool.pack-binary.project.urls]
source = 'https://github.com/dprint/dprint'
repository = 'https://github.com/trim21/dprint-py'
homepage = 'https://dprint.dev/'

[[tool.pack-binary.target]]
url = "https://github.com/dprint/dprint/releases/download/{{ version }}/dprint-x86_64-pc-windows-msvc.zip"
name = "dprint.exe"
platform = "win32"
arch = 'amd64'

[[tool.pack-binary.target]]
url = "https://github.com/dprint/dprint/releases/download/{{ version }}/dprint-x86_64-unknown-linux-gnu.zip"
name = "dprint"
platform = "linux"
arch = 'amd64'
manylinux = '2.17'

[[tool.pack-binary.target]]
url = "https://github.com/dprint/dprint/releases/download/{{ version }}/dprint-aarch64-unknown-linux-gnu.zip"
name = "dprint"
platform = "linux"
arch = 'arm64'
manylinux = '2.17'

[[tool.pack-binary.target]]
url = "https://github.com/dprint/dprint/releases/download/{{ version }}/dprint-aarch64-apple-darwin.zip"
name = "dprint"
platform = "osx"
arch = 'arm64'
macos_target_version = '11.0'

[[tool.pack-binary.target]]
url = "https://github.com/dprint/dprint/releases/download/{{ version }}/dprint-x86_64-apple-darwin.zip"
name = "dprint"
platform = "osx"
arch = 'amd64'
macos_target_version = '11.0'
