[build-system]
requires = ["non-exists-package"]
build-backend = "non-exists-backend"

[project]
name = "gen-dprint-py"
requires-python = "==3.14.6"
version = '0.0.1'
classifiers = [
  "Private :: Do Not Upload",
]
dependencies = [
  "httpx ; python_version >= '3.10'",
  "pydantic ; python_version >= '3.10'",
  "jinja2 ; python_version >= '3.10'",
]

[tool.uv]
package = false

[tool.pyright]
typeCheckingMode = "strict"

[tool.pack-binary]
cmd = 'dprint'

context = { version = '0.55.1' }

[tool.pack-binary.project]
name = "dprint-py"
requires-python = ">=3.0"
version = '0.55.1.4'
description = "a pluggable and configurable code formatting platform."
readme = "readme.md"
license = "MIT"
classifiers = [
  "Programming Language :: Rust",
  "Topic :: Software Development",
]
keywords = ["code-formatter", "formatter"]

authors = [
  { name = "dprint code formatting", email = "david@dprint.dev" },
]
maintainers = [
  { name = "trim21" },
]

[tool.pack-binary.project.urls]
source = 'https://github.com/dprint/dprint'
repository = 'https://github.com/trim21/dprint-py'
homepage = 'https://dprint.dev/'

[[tool.pack-binary.target]]
url = "https://github.com/dprint/dprint/releases/download/{{ version }}/dprint-x86_64-pc-windows-msvc.zip"
name = "dprint.exe"
tag = "win_amd64"

[[tool.pack-binary.target]]
url = "https://github.com/dprint/dprint/releases/download/{{ version }}/dprint-x86_64-unknown-linux-gnu.zip"
name = "dprint"
tag = "manylinux_2_17_x86_64"

[[tool.pack-binary.target]]
url = "https://github.com/dprint/dprint/releases/download/{{ version }}/dprint-aarch64-unknown-linux-gnu.zip"
name = "dprint"
tag = "manylinux_2_17_aarch64"

[[tool.pack-binary.target]]
url = "https://github.com/dprint/dprint/releases/download/{{ version }}/dprint-aarch64-apple-darwin.zip"
name = "dprint"
tag = "macosx_11_0_arm64"

[[tool.pack-binary.target]]
url = "https://github.com/dprint/dprint/releases/download/{{ version }}/dprint-x86_64-apple-darwin.zip"
name = "dprint"
tag = "macosx_11_0_x86_64"

[[tool.pack-binary.target]]
url = "https://github.com/dprint/dprint/releases/download/{{ version }}/dprint-x86_64-unknown-linux-musl.zip"
name = "dprint"
tag = ["manylinux_2_17_x86_64", "musllinux_1_1_x86_64"]

[[tool.pack-binary.target]]
url = "https://github.com/dprint/dprint/releases/download/{{ version }}/dprint-aarch64-pc-windows-msvc.zip"
name = "dprint.exe"
tag = "win_arm64"
